tests/ui/traits/inductive-overflow/supertrait-auto-trait.stderr
error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/supertrait-auto-trait.rs:8:19
   |
LL | auto trait Magic: Copy {}
   |            -----  ^^^^
   |            |
   |            auto traits cannot have super traits or lifetime bounds

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0568`.
